--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "axios": "^1.7.7",
     "macro-css": "^1.0.5",
     "react": "^18.3.1",
+    "react-content-loader": "^7.0.2",
+    "react-content-manager": "^0.1.8",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
