--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react-sneakers",
+  "homepage": "https://pfilippov1.github.io/sneakers-react/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
+    "gh-pages": "^6.2.0",
     "macro-css": "^1.0.5",
     "react": "^18.3.1",
     "react-content-loader": "^7.0.2",
@@ -20,7 +22,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
